<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="courses.projects.edible_eats.UserPreferenceActivity">
    <item android:id="@+id/profile_name"
          android:title="Set Profile Name">
    </item>

    <item
        android:id="@+id/diet_description"
        android:title="@string/diet_descriptions">

        <menu>
            <item
                android:id="@+id/Vegan"
                android:title="@string/vegan"
                />
            <item
                android:id="@+id/Vegetarian"
                android:title="@string/vegetarian"
                />
            <item
                android:id="@+id/Pescatarian"
                android:title="@string/pescatarian"
                />
            <item
                android:id="@+id/Ketogenic"
                android:title="@string/ketogenic"
                />
        </menu>
    </item>
</menu>