<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bkgrnd"
    android:layout_height="match_parent"
    android:backgroundTint="#10FFFFFF"
    android:backgroundTintMode="src_over"
    android:padding="36dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edible_eats"
                android:textColor="@color/white"
                android:textSize="36dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="152dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:layout_marginBottom="150dp"
                android:background="@drawable/cutlery_transparent" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="36dp"
            android:text="@string/sign_in"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>