<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".UserPreferenceActivity">

        <TextView
            android:id="@+id/profile_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/pick_your_preferences"
            android:textColor="@color/main_orange"
            android:textSize="40dp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_diet"
            android:textColor="@color/main_pink"
            android:textSize="36dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/diet_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:entries="@array/diets_array" />

        <TextView
            android:id="@+id/select_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_favorite_foods"
            android:textColor="@color/main_pink"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/food_options"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="68dp"
            android:weightSum="100"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="25"/>

            <CheckBox
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="25"/>

            <CheckBox
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="25"/>

            <CheckBox
                android:id="@+id/option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="25"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:text="@string/find_those_eateries"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>